<!--
 ~ Copyright 2019, E-Kohei
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     https://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.norana.numberplace.ui.PlayActivity">

	<item android:id="@+id/action_undo"
		android:title="@string/action_undo"
		android:icon="@drawable/ic_undo_black_50dp"
		app:showAsAction="ifRoom"/>

	<item android:id="@+id/action_new"
		android:title="@string/action_new"
		app:showAsAction="never"/>

	<item android:id="@+id/action_save"
		android:title="@string/action_save"
		app:showAsAction="never"/>

	<item android:id="@+id/action_restart"
		android:title="@string/action_restart"
		app:showAsAction="never"/>

	<item android:id="@+id/action_clear_note"
		android:title="@string/action_clear_note"
		app:showAsAction="never"/>

	<item android:id="@+id/action_solve"
		android:title="@string/action_solve"
		app:showAsAction="never"/>

</menu>
